--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,1 +1,24 @@
-<h1>All Cocktails</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1591243315780-978fd00ff9db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);">
+  <div class="container">
+    <h1>All Cocktails</h1>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row justify-content-around">
+    <% @cocktails.each do |cocktail| %>
+      <div class="col-12 col-sm-5 col-lg-3">
+        <%= link_to cocktail_path(cocktail), class: "text-decoration-none" do %>
+          <div class="card-category m-3"
+          style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+          url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+            <h3><%= cocktail.name %></h3>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
+
