add select2 to ingredients selection

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light sticky-top">
-  <%= link_to "🍸 COCKTAILS !", cocktails_path, class: "navbar-brand" %>
+  <%= link_to "🍸 NICO-COCKTAILS !", cocktails_path, class: "navbar-brand" %>
 
 
   <form class="form-inline">
