--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -22,8 +22,8 @@
 
     <%= simple_form_for [@cocktail, @dose] do |f| %>
       <%= f.input :description %>
-      <%= f.association :ingredient, class: "js-example-basic-single" %>
-      <%= f.button :submit, "Add Ingredient" %>
+      <%= f.association :ingredient, input_html: { class: 'select2' } %>
+      <%= f.button :submit, "Add Ingredient", class: 'btn btn-outline-secondary' %>
     <% end %>
 
   </div>
