--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -9,6 +9,7 @@
     <div class="col-6">
       <%= simple_form_for @cocktail do |f| %>
         <%= f.input :name %>
+        <%= f.input :photo, as: :file %>
         <%= f.button :submit, class: "btn btn-outline-primary" %>
       <% end %>
     </div>
