--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,6 +11,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  transition: .7s ease;
   h3 {
     font-size: 38px;
     font-weight: bolder;
@@ -18,4 +19,11 @@
     margin: 0;
     text-align: center;
   }
+  &:hover {
+    border-radius: 40px;
+  }
+}
+
+a.text-decoration-none:active {
+    cursor: grabbing;
 }
