--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,14 +5,14 @@
 </div>
 
 <div class="container">
-  <div class="row justify-content-around">
+  <div id="sortable" class="row justify-content-around">
     <% @cocktails.each do |cocktail| %>
       <div class="col-12 col-sm-5 col-lg-3">
         <%= link_to cocktail_path(cocktail), class: "text-decoration-none" do %>
           <div class="card-category m-3"
           style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
           url(<% if cocktail.photo.attached? %>
-              '<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>'
+              '<%= cl_image_path cocktail.photo.key %>'
               <% else %>
               'https://images.unsplash.com/photo-1568644396922-5c3bfae12521?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80'
               <% end %>)">
